ns-and-na.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubetest-ns
