client-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-pod
spec:
  selector:
    matchLabels:
      run: client-pod
  replicas: 2
  template:
    metadata:
      labels:
        run: client-pod
    spec:
      containers:
      - name: client-pod
        image: https://hub.docker.com/r/colgworld/kubetest-api
        ports:
        - containerPort: 3000
