nginx-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pod
spec:
  selector:
    matchLabels:
      run: nginx-pod
  replicas: 2
  template:
    metadata:
      labels:
        run: nginx-pod
    spec:
      containers:
      - name: nginx-pod
        image: nginx:latest
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: nginx-config
          mountPath: /etc/nginx/other.conf
          subPath: other.conf
        ports:
        - containerPort: 80
    volumes:
    - name: nginx-config
      configMap:
        name: nginx-config
