api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: api-pod
  namespace: kubetest
spec:
  type: NodePort
  ports:
  - port: 9000
    targetPort: 9000
    nodePort: 30020
  selector:
    app: api-pod
