client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  labels:
    app: client-pod
  namespace: kubetest
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30021
  selector:
    app: client-pod
