kubetest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: colgworld/kubetest-client:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: client-svc
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: client
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api 
  template:
    metadata:
      labels:
        app: api 
    spec:
      containers:
      - name: api 
        image: colgworld/kubetest-api:latest
        ports:
        - containerPort: 9000
          hostPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  labels:
spec:
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    nodePort: 30090
    name: http
  selector:
    app: api-svc
  type: NodePort
