nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-pod
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30021
  selector:
    app: nginx-pod
